tests/NormalTests/paczka1/fuzzy1/59148637.err
Error in line 5: 1MliIH S612 60,8
Error in line 6: 1MliIH S938 59,8
Error in line 14: Kp2b S612 88,9
Error in line 15: 1MliIH S779 6,3
Error in line 19: Kp2b S779 57,8
Error in line 31: 1MliIH A937 10,3
